--- a/vote.html
+++ b/vote.html
@@ -6,40 +6,40 @@
 <body>
 <table>
 <h1>Welcome to NBA Vote Center</h1>
-<form action="vote.php" method="POST">
+<form action="vote.php" method="post">
 <td><h2>Which team do yuu think will get 2017 NBA Champion</h2></td>
 <tr>
   <td><img src="CAVL.jpg" alt="CAVL" height="100" width="100">
-  <input type="radio" name="team">Cleveland Cavaliers</td>
+  <input type="radio" name="team" value="Cleveland Cavaliers">Cleveland Cavaliers</td>
 </tr>
 <tr>
   <td><img src="golden.jpg" alt="golden" height="80" width="100">
-  <input type="radio" name="team">Golden State Warriors</td>
+  <input type="radio" name="team" value="Golden State Warriors">Golden State Warriors</td>
 </tr>
 <td><h2>Which player do you think will get 2017 Final Most Valuable Player<h2></td>
 <tr>
-  <td><img src="LBJ.jpg" alt="LBJ" height="100" , width="100">
-  <input type="radio" name="player">LeBron James</td>
+  <td><img src="LBJ.jpg" alt="LBJ" height="100" width="100">
+  <input type="radio" name="player" value="LeBron James">LeBron James</td>
 </tr>
 <tr>
   <td><img src="ouwen.jpg" alt="ouwen" height="100" width="100">
-  <input type="radio" name="player">Kyrie Irving</td>
+  <input type="radio" name="player" value="Kyrie Irving">Kyrie Irving</td>
 </tr>
 <tr>
   <td><img src="lefu.jpg" alt="lefu" height="100" width="100">
-  <input type="radio" name="player">Kevin Love</td>
+  <input type="radio" name="player" value="Kevin Love">Kevin Love</td>
 </tr>
 <tr>
   <td><img src="kd.jpg" alt="KD" height="100" width="100">
-  <input type="radio" name="player">Kevin Durant</td>
+  <input type="radio" name="player" value="Kevin Durant">Kevin Durant</td>
 </tr>
 <tr>
   <td><img src="curry.jpg" alt="curry" height="100" width="100">
-  <input type="radio" name="player">Stephen Curry</td>
+  <input type="radio" name="player" value="Stephen Curry">Stephen Curry</td>
 </tr>
 <tr>
   <td><img src="kelai.jpg" alt="kelai" height="100" width="100">
-  <input type="radio" name="player">Klay Thompson</td>
+  <input type="radio" name="player" value="Klay Thompson">Klay Thompson</td>
 </tr>
 <tr><td><input type="submit" value="Submit"></td></tr>
 </form>
